<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="pl.dweb.moneysavingchallenge.NewChallengeFragment">


    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="32dp"
        app:cardCornerRadius="@dimen/cardview_default_radius">

        <LinearLayout
            android:id="@+id/linear_new_challenge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp" >

            <TextView
                android:text="@string/label_new_challenge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/label_new_challenge"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"
                android:fontFamily="sans-serif"
                android:paddingBottom="8dp"
                android:paddingTop="16dp"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal"
               >

                <TextView
                    android:id="@+id/amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:inputType="number"
                    android:text="@string/default_amount_new_challenge" />

                <Button
                    android:id="@+id/decrease_amount_btn"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="34dp"
                    android:layout_height="33dp"
                    android:layout_gravity="right"
                    android:layout_marginTop="16dp"
                    android:text="-" />

                <Button
                    android:id="@+id/increase_amount_btn"
                    style="@style/Widget.AppCompat.Button.Borderless"
                    android:layout_width="38dp"
                    android:layout_height="35dp"
                    android:layout_gravity="right"
                    android:layout_marginTop="16dp"
                    android:text="+" />

            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/hint_target_new_challenge"
                app:counterEnabled="true"
                app:counterMaxLength="50"
                android:id="@+id/til_purpose">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/purpose"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="50"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:hint="@string/hint_weeks_new_challenge"
                    android:id="@+id/label_weeks_spinner"
                    android:layout_weight="0.5" />
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="match_parent"
                    android:hint="@string/hint_currency_new_challenge"
                    android:id="@+id/label_currency_spinner"
                    android:layout_weight="0.5"/>

            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Spinner
                android:id="@+id/week_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:padding="10dp" />

            <Spinner
                android:id="@+id/currency_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:padding="10dp" />

        </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="right" >

                <Button
                    android:id="@+id/apply_btn"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="16dp"
                    android:text="@string/button_apply_new_challenge" />
            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>
